<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/addProduct"
        android:icon="@drawable/baseline_add_product_24"
        android:title="@string/add_new_product" />
    <item
        android:id="@+id/manageProducts"
        android:icon="@drawable/baseline_watch_24"
        android:title="@string/manage_products" />
    <item
        android:id="@+id/manageUsers"
        android:icon="@drawable/baseline_manage_accounts_24"
        android:title="@string/manage_users" />
    <item
        android:id="@+id/manageBrand"
        android:icon="@drawable/baseline_manage_brand_24"
        android:title="@string/manage_brands" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/logout" />
</menu>