<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.UpdateProductFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageButton
                    android:id="@+id/imageProduct"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:background="@drawable/custom_image_round"
                    android:scaleType="fitCenter"
                    android:src="@drawable/baseline_image_24" />

                <EditText
                    android:id="@+id/txtUpdateProductTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_search_bar"
                    android:hint="@string/product_title"
                    android:inputType="text"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/txtUpdateProductBrand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_search_bar"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/txtUpdateProductPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_search_bar"
                    android:hint="@string/product_price"
                    android:inputType="text"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/txtUpdateProductQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_search_bar"
                    android:hint="@string/product_quantity"
                    android:inputType="text"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/txtUpdateProductDescription"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_search_bar"
                    android:gravity="start"
                    android:hint="@string/product_description"
                    android:inputType="textMultiLine"
                    android:padding="10dp" />

                <Button
                    android:id="@+id/btnUpdateProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/quicksand"
                    android:text="@string/update_product"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>